kubernetes/infra/quickwit-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickwit-searcher
  namespace: monitoring
  labels:
    app: quickwit
spec:
  type: ClusterIP
  ports:
    - name: rest
      port: 7280
      targetPort: rest
      protocol: TCP
    - name: grpc
      port: 7281
      targetPort: grpc
      protocol: TCP
  selector:
    app: quickwit
---
apiVersion: v1
kind: Service
metadata:
  name: quickwit-indexer
  namespace: monitoring
  labels:
    app: quickwit
spec:
  type: ClusterIP
  ports:
    - name: rest
      port: 7280
      targetPort: rest
      protocol: TCP
  selector:
    app: quickwit
